css fixed for notification on mobile screen

--- a/styles/notification.css
+++ b/styles/notification.css
@@ -9,8 +9,9 @@
     left: 35%;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
     font-weight: bold;
-    transition: transform 0.5s ease;
-    transform: translateY(-4rem);
+    transition: transform 1s ease;
+    transform: translateY(-7rem);
+    text-align: center;
   }
 
   .show {
